# swig-template

./: .gitignore  .travis.yml  LICENSE  README.md  installDependencies.sh  publishBinaries.sh  settings.gradle
.travis/: buildBinaries.sh  installDependencies.sh  publishBinaries.sh
application/: build.gradle
application/src/main/java/de/jvpichowski/application/: HelloWorld.java
project-native/: build.gradle  compileTasksBase.gradle  compileTasksSwig.gradle
project-native/src/base/: CMakeLists.txt  project.cpp  project.h
project-native/src/binding/java/de/jvpichowski/project/: Project.java  ProjectJNI.java
project-native/src/binding/resources/native/darwin/x86/: libproject.dylib  libproject_binding.dylib
project-native/src/binding/resources/native/darwin/x86_64/: libproject.dylib  libproject_binding.dylib
project-native/src/swig/: CMakeLists.txt  project.i  project_wrap.cpp
project-native/toolchains/: darwin_clang32.cmake  darwin_clang64.cmake  ubuntu_g++32.cmake  ubuntu_g++64.cmake  ubuntu_mingw32.cmake  ubuntu_mingw64.cmake
utils-natives/: build.gradle
utils-natives/src/main/java/de/jvpichowski/utils/natives/: NativeLibrary.java  NativeLibraryLoader.java  NativeSystem.java  Platform.java
wrapper/: build.gradle
wrapper/src/main/java/de/jvpichowski/wrapper/: NativeProjectLibrary.java  Wrapper.java
